# headmaster

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md
backend/: pyproject.toml
backend/headmaster/: __init__.py  cli.py  integrations.py
backend/headmaster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/headmaster/api/: __init__.py  main.py  projection.py  recovery.py  task_manager.py
backend/headmaster/assurance_plane/: __init__.py  approval_gateway.py  audit.py  critic_service.py  evaluator.py  metrics.py  self_improvement.py
backend/headmaster/config/: models.yaml  settings.yaml
backend/headmaster/control_plane/: __init__.py  budget_ledger.py  harness_compiler.py  harness_registry.py  nats_queue.py  policy_engine.py  task_compiler.py  topology_selector.py
backend/headmaster/execution_plane/: __init__.py  agent_runtime.py  concurrency_config.py  orchestrator.py
backend/headmaster/schemas/: __init__.py  agent_manifest.py  approval.py  artifact.py  common.py  critique_report.py  environment.py  events.py  evidence_bundle.py  harness_manifest.py  memory_record.py  rejection_taxonomy.py  states.py  task_spec.py
backend/headmaster/storage/: __init__.py  event_store.py  postgres_event_store.py  replay.py
backend/headmaster/tests/: test_agent_tool_loop.py  test_api.py  test_api_subprocess.py  test_approval_and_budget.py  test_cli_e2e.py  test_cli_integrations.py  test_critic_service.py  test_evaluator.py  test_harness_templates.py  test_schemas.py  (+15 more)
backend/scripts/: agy_pty_probe.py  commit_validator.py  sdd_validator.py
(+72 files in other folders)
