[project]
name = "headmaster"
version = "0.1.0"
description = "Headmaster — LLM-agnostic agentic orchestration control plane"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
headmaster = "headmaster.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "types-PyYAML",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["headmaster*"]

[tool.pytest.ini_options]
testpaths = ["headmaster/tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
